--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 ">
     <link rel="stylesheet" href="assets/style.css">
 </head>
-<body class="bg-dark text-white px-5">
+<body class="bg-black text-white px-5">
 
-    <div class="d-flex justify-content-between bg-dark text-white align-items-center py-3 fw-semibold">
+    <div class="d-flex justify-content-between text-white align-items-center py-3 fw-semibold">
             <div class="d-flex align-content-start align-items-center">
                 <img src="assets/netflix_logo.png" alt="" class="mia1">
                 <nav class="align-items-center">
@@ -44,7 +44,7 @@
 
     <div class="d-flex align-content-start">
         <h1 class="fs-2">TV Shows</h1>
-        <select name="generi" id="" class="bg-dark text-white px-2 mx-5 py-0 fw-semibold">
+        <select name="generi" id="" class="bg-black text-white px-2 mx-5 py-0 fw-semibold">
             <option value="">Geners</option>
             <option value="">Documentary</option>
             <option value="">Action</option>
