--- a/profile.html
+++ b/profile.html
@@ -4,12 +4,61 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix Clone</title>
+    <title>Netflix Clone Profile</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css
 ">
+    <link rel="stylesheet" href="assets/style2.css">
 </head>
-<body>
+<body class="bg-black text-white">
+    
+    <img class="logo1" src="assets/netflix_logo.png" alt="">
 
+    <div class="d-flex justify-content-center">
+        <div class="">
+            <h1 class="fs-1">Edit Profile</h1>
+            <hr>
+            <div name="tronco" class="d-flex justify-content-start fw-semibold">
+                <img class="avatar1" src="assets/avatar.png" alt="">
+                <div name="tuttodestra" class="ps-3">
+                    <div name="sopra">
+                        <p class="bg-secondary py-1 ps-2 fs-4">Strive Student</p>
+                        <p class="mb-1 fs-4">Language</p>
+                        <select name="lingue" id="" class="bg-black text-white py-1 pe-3 ps-1">
+                            <option value="">English</option>
+                            <option value="">Italian</option>
+                            <option value="">French</option>
+                            <option value="">Spanish</option>
+                        </select>
+                    </div>
+                    <hr>
+                    <div name="centro">
+                        <p class="fs-4">Maturity Settings:</p>
+                        <button class="btn bg-dark py-1 px-2 text-white mb-3">ALL MATRITY RATINGS</button>
+                        <p>Show titles of all maturity ratings fot this profile.</p>
+                        <button class="btn btn-outline-secondary px-4">EDIT</button>
+                    </div>
+                    <hr>
+                    <div name="sotto">
+                        <p class="fs-4">Autoplay controls</p>
+                        <div>
+                            <input type="checkbox" class="">
+                            <label for="" class="p2">Autoplay next episodes in a series on all devices.</label>
+                        </div>
+                        <div>
+                            <input type="checkbox" class="">
+                            <label for="" class="p2">Autoplay previews while browsing on all devices.</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <hr>
+            <div class="fw-semibold">
+                <button class="btn btn-outline-secondary px-4">SAVE</button>
+                <button class="btn btn-outline-secondary px-4">CANCEL</button>
+                <button class="btn btn-outline-secondary px-4">DELETE PROFILE</button>
+            </div>
+        </div>
+    </div>
     
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js
