--- a/profile.html
+++ b/profile.html
@@ -53,8 +53,8 @@
             </div>
             <hr>
             <div class="fw-semibold">
-                <button class="btn btn-outline-secondary px-4">SAVE</button>
-                <button class="btn btn-outline-secondary px-4">CANCEL</button>
+                <button class="btn btn-outline-secondary px-4 me-2">SAVE</button>
+                <button class="btn btn-outline-secondary px-4 me-2">CANCEL</button>
                 <button class="btn btn-outline-secondary px-4">DELETE PROFILE</button>
             </div>
         </div>
